--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
+    "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^5.0.4",
     "vite": "^4.2.0"
   }
 }
